# mailomat

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  TODO.md  app_config.toml  fly.toml  pgdb_fly.toml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
config/: base.toml  local.toml  production.toml
examples/: README.md  generate_a_hash_string.rs  generate_a_secret_key.rs  generate_admin_data.rs  generate_b64u_enc_string.rs  generate_password_hash.rs  send_login_requests.rs
migrations/: 20240319183035_create_subscriptions_table.sql  20240729093834_add_status_to_subscriptions.sql  20240729122408_make_status_non_null_in_subscriptions.sql  20240729125808_create_subscription_tokens_table.sql  20240801072249_subscription_table_id_column_not_autogenerated_by_default.sql  20240808144810_create_users_table.sql  20250516124413_seed_user.sql
scripts/: init_databases.sh  init_docker_db.sh  init_redis_db.sh  send_requests.sh
src/: config.rs  email_client.rs  error.rs  lib.rs  main.rs  redis_manager.rs  routes.rs  serve.rs  templ_manager.rs  template_manager.rs  utils.rs
src/app/: mod.rs  serve.rs
src/config/: data.rs  error.rs  mod.rs  structs.rs  types.rs
src/database/: mod.rs
src/model/: mod.rs
src/routes/: mod.rs
src/web/: data.rs  error.rs  log.rs  midware.rs  mod.rs  routes.rs  serve.rs  structs.rs  subscriptions.rs  subscriptions_confirm.rs  types.rs
src/web/auth/: credentials.rs  error.rs  mod.rs  password.rs
src/web/routes/: api_news.rs  api_subscribe.rs  home.rs  login.rs  mod.rs  subscriptions_confirm.rs
src/web/routes/admin/: dashboard.rs  mod.rs
src/web/routes/admin/password/: mod.rs
src/web/routes/api/: mod.rs  news.rs  subscribe.rs  subscribe_confirm.rs
templates/: html_email.html  plain_email.txt
templates/html/: admin_dashboard.html  change_admin_password.html  home.html  login_form.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  news.rs  subscriptions.rs  subscriptions_confirm.rs
