[package]
name = "mailomat"
version = "0.1.0"
authors = ["Vid Kavšek <vkavsek@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mailomat"
path = "src/main.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id"] }
# Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.8"
# Time 
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Convenience macros
strum_macros = "0.26"
derive_more = "0.99"
# Validation
validator = { version = "0.18", features = ["derive"] }
lazy-regex = "3"
unicode-segmentation = "1"
# Others
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }

# REQWEST
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
# SQLX
[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate"]

[dev-dependencies]
anyhow = "1"
claims = "0.7"
fake = "2.9"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.6"
