[package]
name = "mailomat"
version = "0.1.0"
authors = ["Vid Kavšek <vkavsek@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mailomat"
path = "src/main.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
# Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Time 
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Convenience macros
strum_macros = "0.27"
derive_more = { version = "2", features = ["deref", "display"] }
# Validation
validator = { version = "0.20", features = ["derive"] }
lazy-regex = "3"
unicode-segmentation = "1"
# Templating
tera = "1"
# Config
figment = { version = "0.10", features = ["env", "toml"] }
# Password Hashing 
argon2 = { version = "0.5", features = ["std"] }
# Message Authentication Codes
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
# Errors
thiserror = "2"
anyhow = "1"
# Others
secrecy = { version = "0.10", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.9", features = ["std_rng"] }
base64 = "0.22"

# REQWEST
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
# SQLX
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
  "migrate",
  "uuid",
]

[dev-dependencies]
wiremock = "0.6"
claims = "0.8"
fake = "4.3"
quickcheck = "1"
quickcheck_macros = "1"
linkify = "0.10"
